@@ -252,6 +252,9 @@ Release 0.22.0 - Unreleased
     HDFS-1454. Update the documentation to reflect that clients don't write
     blocks to local disk before copying to HDFS. (Harsh J Chouraria via todd)
 
+    HDFS-1980. Move build/webapps deeper in the build directory heirarchy
+    to aid eclipse users. (todd)
+
   OPTIMIZATIONS
 
     HDFS-1140. Speedup INode.getPathComponents. (Dmytro Molkov via shv)
